--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -19,6 +19,10 @@ jobs:
         with:
           meteor-release: '3.1'
 
+      - name: Install mTest
+        run: |
+          npm i -g @zodern/mtest
+
       - name: Run Tests
         run: |
           # Fix using old versions of Meteor
